[project]
name = "fl-nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "cameron.steele",email = "cameron.steele@naimuri.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "better-profanity (>=0.7.0,<0.8.0)",
    "alt-profanity-check (>=1.8.0,<2.0.0)",
    "transformers (>=5.7.0,<6.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "protobuf (>=7.34.1,<8.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "h11 (>=0.16.0,<0.17.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
